--- a/Pipfile
+++ b/Pipfile
@@ -4,42 +4,43 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pep8 = "==1.7.1"
-djangorestframework = "==3.14.0"
-djoser = "==2.1.0"
-asgiref = "==3.7.2"
-certifi = "==2023.11.17"
-cffi = "==1.15.1"
-charset-normalizer = "==3.3.2"
-coreapi = "==2.3.3"
-coreschema = "==0.0.4"
-cryptography = "==42.0.0"
-defusedxml = "==0.8.0rc2"
-django = "==3.2.23"
-django-templated-mail = "==1.1.1"
-djangorestframework-simplejwt = "==4.8.0"
+pep8 = "*"
+djangorestframework = "*"
+djoser = "*"
+asgiref = "*"
+certifi = "*"
+cffi = "*"
+charset-normalizer = "*"
+coreapi = "*"
+coreschema ="*"
+cryptography = "*"
+defusedxml = "*"
+django = "*"
+django-templated-mail = "*"
+djangorestframework-simplejwt = "*"
 idna = "==3.6"
-importlib-metadata = "==1.7.0"
-itypes = "==1.2.0"
-jinja2 = "==3.1.3"
-markupsafe = "==2.1.4"
-oauthlib = "==3.2.2"
-pycparser = "==2.21"
-pyjwt = "==2.8.0"
-python3-openid = "==3.2.0"
-pytz = "==2023.3.post1"
-requests = "==2.31.0"
-requests-oauthlib = "==1.3.1"
+importlib-metadata = "*"
+itypes = "*"
+jinja2 = "*"
+markupsafe = "*"
+oauthlib = "*"
+pycparser = "*"
+pyjwt = "*"
+python3-openid = "*"
+pytz = "*"
+requests = "*"
+requests-oauthlib = "*"
 six = "==1.16.0"
-social-auth-app-django = "==4.0.0"
-social-auth-core = "==4.4.2"
-sqlparse = "==0.4.4"
-typing-extensions = "==4.7.1"
-uritemplate = "==4.1.1"
-urllib3 = "==2.0.7"
-zipp = "==3.15.0"
+social-auth-app-django = "*"
+social-auth-core = "*"
+sqlparse = "*"
+typing-extensions = "*"
+uritemplate = "*"
+urllib3 = "*"
+zipp = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.7"
+python_version = "3.11"
+pip_version = "21.3.1"
